loadbalancer/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        deployment: haproxy
    spec:
      containers:
      - name: haproxy
        image: gitlab-registry.cern.ch/kosamara/kfsso-proxy:haproxy-alpine
        imagePullPolicy: "Always"
        ports:
        - name: tcp-80
          containerPort: 8080
        - name: tcp-443
          containerPort: 8443
        volumeMounts:
        - name: haproxy-cfg
          mountPath: "/usr/local/etc/haproxy/"
      volumes:
      - name: haproxy-cfg
        configMap:
          name: haproxy-cfg
